--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.1.0",
+    "@angular/animations": "^7.1.4",
+    "@angular/cdk": "^7.3.7",
     "@angular/cli": "^7.1.4",
     "@angular/common": "~7.1.0",
     "@angular/compiler": "~7.1.0",
     "@angular/compiler-cli": "^7.2.9",
     "@angular/core": "~7.1.0",
     "@angular/forms": "~7.1.0",
+    "@angular/material": "^7.3.7",
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
@@ -26,6 +28,7 @@
     "bootstrap": "^3.4.1",
     "core-js": "^2.5.4",
     "express": "^4.16.4",
+    "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
     "mongoose": "^5.4.19",
     "nodemailer": "^5.1.1",
@@ -34,7 +37,7 @@
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.6",
+    "@angular-devkit/build-angular": "^0.13.8",
     "@angular/language-service": "~7.1.0",
     "@fortawesome/fontawesome-free": "^5.7.2",
     "@types/jasmine": "~2.8.8",
@@ -43,7 +46,7 @@
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.1.1",
+    "karma": "^4.0.1",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
